added some more questions and answers

--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -53,13 +53,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "586d31aa-ed77-465f-b1d6-fa26d4dadf9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "technical_questions = {\n",
-    "    'id': [0],\n",
+    "    'id': [0, 1, 2, 3, 5, 6, 7, 8, 9, 10],\n",
     "    'question': [\n",
     "        'What is Polymorphism?',\n",
     "        'What is a fibonacci series?',\n",
@@ -76,14 +76,17 @@
     "        'many forms;  methods/functions/operators with the same name that can be executed on many objects or classes',\n",
     "        'a sequence in which each number is the sum of the two preceding ones',\n",
     "        'a clause used to combine rows from two or more tables based on a related column between them',\n",
-    "        'Inner Join, Left Join, Right Join, Full Join',\n",
+    "        'inner Join, Left Join, Right Join, Full Join',\n",
     "        'returns all data that have matching values in both tables',\n",
     "        'returns all data from the left table, and the matched data from the right table',\n",
     "        'returns all data from the right table, and the mathched data from the left table',\n",
     "        'returns all data when there is a match in either the left or right',\n",
-    "        'User enters URL in browser. This sends a request to a DNS server to translate the domain name into an IP Address. The browser then connects to that IP address,\n",
-    "        request webpage data, receives the HTML code from the web server, and finally renders the page on the screen, displaying the website content.\n",
-    "        primarily involves the \"GET\" HTTP method, which is used to retrieve data from a server without modifying it.\n",
+    "        'user enters URL in browser. This sends a request to a DNS server to translate the domain name into an IP Address. The browser then connects to that IP address,\\\n",
+    "        request webpage data, receives the HTML code from the web server, and finally renders the page on the screen, displaying the website content.\\\n",
+    "        primarily involves the GET HTTP method, which is used to retrieve data from a server without modifying it.',\n",
+    "        'declaritve programming generally leads to more readable, maintainable, and easier-to-understand code; it is code that says what you want; what the program should do,\\\n",
+    "        while imperative code says how you want something done; how the program should do it. this is good to use when your problem involves complex control flows and state changes,\\\n",
+    "        or when you need to interact with low-level hardware',\n",
     "        \n",
     "        \n",
     "    ]\n",
@@ -92,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "ce79e3d8-ab18-4243-964c-11a68504afaf",
    "metadata": {},
    "outputs": [
@@ -129,19 +132,91 @@
        "      <td>What is Polymorphism?</td>\n",
        "      <td>many forms;  methods/functions/operators with ...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>What is a fibonacci series?</td>\n",
+       "      <td>a sequence in which each number is the sum of ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>What is a Join in SQL?</td>\n",
+       "      <td>a clause used to combine rows from two or more...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>What are all the Joins in SQL?</td>\n",
+       "      <td>inner Join, Left Join, Right Join, Full Join</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>What is an Inner Join?</td>\n",
+       "      <td>returns all data that have matching values in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>What is Left Join?</td>\n",
+       "      <td>returns all data from the left table, and the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>What is Right Join?</td>\n",
+       "      <td>returns all data from the right table, and the...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>What is Full Join?</td>\n",
+       "      <td>returns all data when there is a match in eith...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Explain the process of a user visiting a web p...</td>\n",
+       "      <td>user enters URL in browser. This sends a reque...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>What are your thoughts on declarative vs. impe...</td>\n",
+       "      <td>declaritve programming generally leads to more...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id               question  \\\n",
-       "0   0  What is Polymorphism?   \n",
+       "   id                                           question  \\\n",
+       "0   0                              What is Polymorphism?   \n",
+       "1   1                        What is a fibonacci series?   \n",
+       "2   2                             What is a Join in SQL?   \n",
+       "3   3                     What are all the Joins in SQL?   \n",
+       "4   5                             What is an Inner Join?   \n",
+       "5   6                                 What is Left Join?   \n",
+       "6   7                                What is Right Join?   \n",
+       "7   8                                 What is Full Join?   \n",
+       "8   9  Explain the process of a user visiting a web p...   \n",
+       "9  10  What are your thoughts on declarative vs. impe...   \n",
        "\n",
        "                                              answer  \n",
-       "0  many forms;  methods/functions/operators with ...  "
+       "0  many forms;  methods/functions/operators with ...  \n",
+       "1  a sequence in which each number is the sum of ...  \n",
+       "2  a clause used to combine rows from two or more...  \n",
+       "3       inner Join, Left Join, Right Join, Full Join  \n",
+       "4  returns all data that have matching values in ...  \n",
+       "5  returns all data from the left table, and the ...  \n",
+       "6  returns all data from the right table, and the...  \n",
+       "7  returns all data when there is a match in eith...  \n",
+       "8  user enters URL in browser. This sends a reque...  \n",
+       "9  declaritve programming generally leads to more...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
