--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "586d31aa-ed77-465f-b1d6-fa26d4dadf9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "technical_questions = {\n",
     "    'id': [\n",
-    "        0, 1, 2, 3, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27\n",
+    "        0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27\n",
     "           ],\n",
     "    'question': [\n",
     "        'What is Polymorphism?',\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "83506f35-c41e-404c-9b7b-120f7714ac6d",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "27\n",
+      "28\n",
       "28\n",
       "28\n"
      ]
@@ -164,25 +164,283 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7f06ce7-60eb-49fc-b738-9d9aa58b2544",
+   "metadata": {},
+   "source": [
+    "### Creating a DataFrame using the dictionary I made"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "ce79e3d8-ab18-4243-964c-11a68504afaf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "All arrays must be of the same length",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mDataFrame\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtechnical_questions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m df\n",
-      "File \u001b[1;32m\\\\?\\C:\\Users\\RhaMo\\AppData\\Roaming\\jupyterlab-desktop\\jlab_server\\Lib\\site-packages\\pandas\\core\\frame.py:767\u001b[0m, in \u001b[0;36mDataFrame.__init__\u001b[1;34m(self, data, index, columns, dtype, copy)\u001b[0m\n\u001b[0;32m    761\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_init_mgr(\n\u001b[0;32m    762\u001b[0m         data, axes\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m\"\u001b[39m: index, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcolumns\u001b[39m\u001b[38;5;124m\"\u001b[39m: columns}, dtype\u001b[38;5;241m=\u001b[39mdtype, copy\u001b[38;5;241m=\u001b[39mcopy\n\u001b[0;32m    763\u001b[0m     )\n\u001b[0;32m    765\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, \u001b[38;5;28mdict\u001b[39m):\n\u001b[0;32m    766\u001b[0m     \u001b[38;5;66;03m# GH#38939 de facto copy defaults to False only in non-dict cases\u001b[39;00m\n\u001b[1;32m--> 767\u001b[0m     mgr \u001b[38;5;241m=\u001b[39m \u001b[43mdict_to_mgr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmanager\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    768\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, ma\u001b[38;5;241m.\u001b[39mMaskedArray):\n\u001b[0;32m    769\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mma\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mrecords\n",
-      "File \u001b[1;32m\\\\?\\C:\\Users\\RhaMo\\AppData\\Roaming\\jupyterlab-desktop\\jlab_server\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:503\u001b[0m, in \u001b[0;36mdict_to_mgr\u001b[1;34m(data, index, columns, dtype, typ, copy)\u001b[0m\n\u001b[0;32m    499\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    500\u001b[0m         \u001b[38;5;66;03m# dtype check to exclude e.g. range objects, scalars\u001b[39;00m\n\u001b[0;32m    501\u001b[0m         arrays \u001b[38;5;241m=\u001b[39m [x\u001b[38;5;241m.\u001b[39mcopy() \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(x, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01melse\u001b[39;00m x \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m arrays]\n\u001b[1;32m--> 503\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43marrays_to_mgr\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrays\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindex\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtyp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtyp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconsolidate\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcopy\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m\\\\?\\C:\\Users\\RhaMo\\AppData\\Roaming\\jupyterlab-desktop\\jlab_server\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:114\u001b[0m, in \u001b[0;36marrays_to_mgr\u001b[1;34m(arrays, columns, index, dtype, verify_integrity, typ, consolidate)\u001b[0m\n\u001b[0;32m    111\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m verify_integrity:\n\u001b[0;32m    112\u001b[0m     \u001b[38;5;66;03m# figure out the index, if necessary\u001b[39;00m\n\u001b[0;32m    113\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m index \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m--> 114\u001b[0m         index \u001b[38;5;241m=\u001b[39m \u001b[43m_extract_index\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrays\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    115\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    116\u001b[0m         index \u001b[38;5;241m=\u001b[39m ensure_index(index)\n",
-      "File \u001b[1;32m\\\\?\\C:\\Users\\RhaMo\\AppData\\Roaming\\jupyterlab-desktop\\jlab_server\\Lib\\site-packages\\pandas\\core\\internals\\construction.py:677\u001b[0m, in \u001b[0;36m_extract_index\u001b[1;34m(data)\u001b[0m\n\u001b[0;32m    675\u001b[0m lengths \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mset\u001b[39m(raw_lengths))\n\u001b[0;32m    676\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lengths) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m--> 677\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAll arrays must be of the same length\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    679\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m have_dicts:\n\u001b[0;32m    680\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    681\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMixing dicts with non-Series may lead to ambiguous ordering.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    682\u001b[0m     )\n",
-      "\u001b[1;31mValueError\u001b[0m: All arrays must be of the same length"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>What is Polymorphism?</td>\n",
+       "      <td>many forms;  methods/functions/operators with ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>What is a fibonacci series?</td>\n",
+       "      <td>a sequence in which each number is the sum of ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>What is a Join in SQL?</td>\n",
+       "      <td>a clause used to combine rows from two or more...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>What are all the Joins in SQL?</td>\n",
+       "      <td>inner Join, Left Join, Right Join, Full Join</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>What is an Inner Join?</td>\n",
+       "      <td>returns all data that have matching values in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>What is Left Join?</td>\n",
+       "      <td>returns all data from the left table, and the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>What is Right Join?</td>\n",
+       "      <td>returns all data from the right table, and the...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>What is Full Join?</td>\n",
+       "      <td>returns all data when there is a match in eith...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Explain the process of a user visiting a web p...</td>\n",
+       "      <td>user enters URL in browser. This sends a reque...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>What are your thoughts on declarative vs. impe...</td>\n",
+       "      <td>declarative programming generally leads to mor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>What is OOP?</td>\n",
+       "      <td>it is Object Oriented Programming, a programmi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>What are the 4 pillars of OOP?</td>\n",
+       "      <td>the 4 pillars of OOP are Abstract, Inheritance...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>What is Abstraction?</td>\n",
+       "      <td>the process of simplifying code by removing un...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>13</td>\n",
+       "      <td>What is Inheritance?</td>\n",
+       "      <td>allows programmers to create new classes based...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14</td>\n",
+       "      <td>What is Encapsulation?</td>\n",
+       "      <td>bundle data and methods into easy-to-use units...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>What is functional programming?</td>\n",
+       "      <td>using functions as data objects throughout cod...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>What are you thoughts functional and object-or...</td>\n",
+       "      <td>OOP is a good choice to use if  memory is limi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>17</td>\n",
+       "      <td>What are list?</td>\n",
+       "      <td>a data structure that is in mutable that can h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>What are Tuples?</td>\n",
+       "      <td>a data type that is immutable and consumes les...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>19</td>\n",
+       "      <td>What is a dictionary?</td>\n",
+       "      <td>a mutable data structure that allows you to st...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>20</td>\n",
+       "      <td>What is a set?</td>\n",
+       "      <td>a data collection type used in Python for stor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>21</td>\n",
+       "      <td>What is a list comprehension?</td>\n",
+       "      <td>a one-liner that is able to create a new list ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>22</td>\n",
+       "      <td>What is the \"with\" statement designed for?</td>\n",
+       "      <td>it is typically used for the management of ope...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>23</td>\n",
+       "      <td>What is Try, Except in Python?</td>\n",
+       "      <td>the try block lets you test a block of code fo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>24</td>\n",
+       "      <td>What does the else block do in a try/except cl...</td>\n",
+       "      <td>the else block lets you execute code when ther...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>25</td>\n",
+       "      <td>What does the finally block do in a try/except...</td>\n",
+       "      <td>the finally block lets you execute code, regar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>26</td>\n",
+       "      <td>What are decorators in Python?</td>\n",
+       "      <td>design pattern that adds new functionality to ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>27</td>\n",
+       "      <td>What are the advantages of NumPy over regular ...</td>\n",
+       "      <td>numpy arrays use less memory, are faster at pe...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    id                                           question  \\\n",
+       "0    0                              What is Polymorphism?   \n",
+       "1    1                        What is a fibonacci series?   \n",
+       "2    2                             What is a Join in SQL?   \n",
+       "3    3                     What are all the Joins in SQL?   \n",
+       "4    4                             What is an Inner Join?   \n",
+       "5    5                                 What is Left Join?   \n",
+       "6    6                                What is Right Join?   \n",
+       "7    7                                 What is Full Join?   \n",
+       "8    8  Explain the process of a user visiting a web p...   \n",
+       "9    9  What are your thoughts on declarative vs. impe...   \n",
+       "10  10                                       What is OOP?   \n",
+       "11  11                     What are the 4 pillars of OOP?   \n",
+       "12  12                               What is Abstraction?   \n",
+       "13  13                               What is Inheritance?   \n",
+       "14  14                             What is Encapsulation?   \n",
+       "15  15                    What is functional programming?   \n",
+       "16  16  What are you thoughts functional and object-or...   \n",
+       "17  17                                     What are list?   \n",
+       "18  18                                   What are Tuples?   \n",
+       "19  19                              What is a dictionary?   \n",
+       "20  20                                     What is a set?   \n",
+       "21  21                      What is a list comprehension?   \n",
+       "22  22         What is the \"with\" statement designed for?   \n",
+       "23  23                     What is Try, Except in Python?   \n",
+       "24  24  What does the else block do in a try/except cl...   \n",
+       "25  25  What does the finally block do in a try/except...   \n",
+       "26  26                     What are decorators in Python?   \n",
+       "27  27  What are the advantages of NumPy over regular ...   \n",
+       "\n",
+       "                                               answer  \n",
+       "0   many forms;  methods/functions/operators with ...  \n",
+       "1   a sequence in which each number is the sum of ...  \n",
+       "2   a clause used to combine rows from two or more...  \n",
+       "3        inner Join, Left Join, Right Join, Full Join  \n",
+       "4   returns all data that have matching values in ...  \n",
+       "5   returns all data from the left table, and the ...  \n",
+       "6   returns all data from the right table, and the...  \n",
+       "7   returns all data when there is a match in eith...  \n",
+       "8   user enters URL in browser. This sends a reque...  \n",
+       "9   declarative programming generally leads to mor...  \n",
+       "10  it is Object Oriented Programming, a programmi...  \n",
+       "11  the 4 pillars of OOP are Abstract, Inheritance...  \n",
+       "12  the process of simplifying code by removing un...  \n",
+       "13  allows programmers to create new classes based...  \n",
+       "14  bundle data and methods into easy-to-use units...  \n",
+       "15  using functions as data objects throughout cod...  \n",
+       "16  OOP is a good choice to use if  memory is limi...  \n",
+       "17  a data structure that is in mutable that can h...  \n",
+       "18  a data type that is immutable and consumes les...  \n",
+       "19  a mutable data structure that allows you to st...  \n",
+       "20  a data collection type used in Python for stor...  \n",
+       "21  a one-liner that is able to create a new list ...  \n",
+       "22  it is typically used for the management of ope...  \n",
+       "23  the try block lets you test a block of code fo...  \n",
+       "24  the else block lets you execute code when ther...  \n",
+       "25  the finally block lets you execute code, regar...  \n",
+       "26  design pattern that adds new functionality to ...  \n",
+       "27  numpy arrays use less memory, are faster at pe...  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
