--- a/import_data.ipynb
+++ b/import_data.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "f3c3917c-e5c1-40ef-a45d-982adfead307",
    "metadata": {},
    "outputs": [],
@@ -38,14 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "id": "586d31aa-ed77-465f-b1d6-fa26d4dadf9a",
    "metadata": {},
    "outputs": [],
    "source": [
     "technical_questions = {\n",
-    "    'id': [\n",
-    "        0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27\n",
+    "    '_id': [\n",
+    "        0, 1, 2, 3, 4, 5, 6, 7, 8, 9,\n",
+    "        10, 11, 12, 13, 14, 15, 16, 17, 18, 19,\n",
+    "        20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30,\n",
+    "        31, 32\n",
     "           ],\n",
     "    'question': [\n",
     "        'What is Polymorphism?',\n",
@@ -75,7 +78,12 @@
     "        'What does the else block do in a try/except clause?',\n",
     "        'What does the finally block do in a try/except clause?',\n",
     "        'What are decorators in Python?',\n",
-    "        'What are the advantages of NumPy over regular Python lists?'\n",
+    "        'What are the advantages of NumPy over regular Python lists?',\n",
+    "        'What are the different types of tests you are familiar with?',\n",
+    "        'Can you explain Kubernetes',\n",
+    "        'What is a Software Engineer?',\n",
+    "        'What is a Data Engineer?',\n",
+    "        'What is Architecture?'\n",
     "    ],\n",
     "    'answer': [\n",
     "        'many forms;  methods/functions/operators with the same name that can be executed on many objects or classes\\\n",
@@ -127,7 +135,16 @@
     "        'design pattern that adds new functionality to an existing object without modifying its structure; used to\\\n",
     "        extend the behavior of functions or methods',\n",
     "        'numpy arrays use less memory, are faster at performing operations and they offer simple array multiple,\\\n",
-    "        addition, and a lot more built-in functionality'\n",
+    "        addition, and a lot more built-in functionality',\n",
+    "        'Unit testing and manual testing',\n",
+    "        'an open source system for automating deployment, scaling, and management of containerized applications. It\\\n",
+    "        automates many of the tasks involved in managing containers',\n",
+    "        'uses computer science and engineering principles that help deal with the design, development, testing, and\\\n",
+    "        maintenance of software applications',\n",
+    "        'an IT professional who prepares data for use by business analysts and data scientists.  responsible for\\\n",
+    "        designing, maintaining, and optimizing data infrastructure for data collection, management, transformation,\\\n",
+    "        and access',\n",
+    "        'the design decisions and structure of a system, and how its components interact with each other'\n",
     "    ]\n",
     "}"
    ]
@@ -143,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "id": "83506f35-c41e-404c-9b7b-120f7714ac6d",
    "metadata": {},
    "outputs": [
@@ -151,14 +168,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28\n",
-      "28\n",
-      "28\n"
+      "33\n",
+      "33\n",
+      "33\n"
      ]
     }
    ],
    "source": [
-    "print(len(technical_questions['id']))\n",
+    "print(len(technical_questions['_id']))\n",
     "print(len(technical_questions['question']))\n",
     "print(len(technical_questions['answer']))"
    ]
@@ -173,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "ce79e3d8-ab18-4243-964c-11a68504afaf",
    "metadata": {},
    "outputs": [
@@ -198,7 +215,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
+       "      <th>_id</th>\n",
        "      <th>question</th>\n",
        "      <th>answer</th>\n",
        "    </tr>\n",
@@ -372,40 +389,75 @@
        "      <td>What are the advantages of NumPy over regular ...</td>\n",
        "      <td>numpy arrays use less memory, are faster at pe...</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>28</td>\n",
+       "      <td>What are the different types of tests you are ...</td>\n",
+       "      <td>Unit testing and manual testing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Can you explain Kubernetes</td>\n",
+       "      <td>an open source system for automating deploymen...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>30</td>\n",
+       "      <td>What is a Software Engineer?</td>\n",
+       "      <td>uses computer science and engineering principl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>31</td>\n",
+       "      <td>What is a Data Engineer?</td>\n",
+       "      <td>an IT professional who prepares data for use b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>32</td>\n",
+       "      <td>What is Architecture?</td>\n",
+       "      <td>the design decisions and structure of a system...</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    id                                           question  \\\n",
-       "0    0                              What is Polymorphism?   \n",
-       "1    1                        What is a fibonacci series?   \n",
-       "2    2                             What is a Join in SQL?   \n",
-       "3    3                     What are all the Joins in SQL?   \n",
-       "4    4                             What is an Inner Join?   \n",
-       "5    5                                 What is Left Join?   \n",
-       "6    6                                What is Right Join?   \n",
-       "7    7                                 What is Full Join?   \n",
-       "8    8  Explain the process of a user visiting a web p...   \n",
-       "9    9  What are your thoughts on declarative vs. impe...   \n",
-       "10  10                                       What is OOP?   \n",
-       "11  11                     What are the 4 pillars of OOP?   \n",
-       "12  12                               What is Abstraction?   \n",
-       "13  13                               What is Inheritance?   \n",
-       "14  14                             What is Encapsulation?   \n",
-       "15  15                    What is functional programming?   \n",
-       "16  16  What are you thoughts functional and object-or...   \n",
-       "17  17                                     What are list?   \n",
-       "18  18                                   What are Tuples?   \n",
-       "19  19                              What is a dictionary?   \n",
-       "20  20                                     What is a set?   \n",
-       "21  21                      What is a list comprehension?   \n",
-       "22  22         What is the \"with\" statement designed for?   \n",
-       "23  23                     What is Try, Except in Python?   \n",
-       "24  24  What does the else block do in a try/except cl...   \n",
-       "25  25  What does the finally block do in a try/except...   \n",
-       "26  26                     What are decorators in Python?   \n",
-       "27  27  What are the advantages of NumPy over regular ...   \n",
+       "    _id                                           question  \\\n",
+       "0     0                              What is Polymorphism?   \n",
+       "1     1                        What is a fibonacci series?   \n",
+       "2     2                             What is a Join in SQL?   \n",
+       "3     3                     What are all the Joins in SQL?   \n",
+       "4     4                             What is an Inner Join?   \n",
+       "5     5                                 What is Left Join?   \n",
+       "6     6                                What is Right Join?   \n",
+       "7     7                                 What is Full Join?   \n",
+       "8     8  Explain the process of a user visiting a web p...   \n",
+       "9     9  What are your thoughts on declarative vs. impe...   \n",
+       "10   10                                       What is OOP?   \n",
+       "11   11                     What are the 4 pillars of OOP?   \n",
+       "12   12                               What is Abstraction?   \n",
+       "13   13                               What is Inheritance?   \n",
+       "14   14                             What is Encapsulation?   \n",
+       "15   15                    What is functional programming?   \n",
+       "16   16  What are you thoughts functional and object-or...   \n",
+       "17   17                                     What are list?   \n",
+       "18   18                                   What are Tuples?   \n",
+       "19   19                              What is a dictionary?   \n",
+       "20   20                                     What is a set?   \n",
+       "21   21                      What is a list comprehension?   \n",
+       "22   22         What is the \"with\" statement designed for?   \n",
+       "23   23                     What is Try, Except in Python?   \n",
+       "24   24  What does the else block do in a try/except cl...   \n",
+       "25   25  What does the finally block do in a try/except...   \n",
+       "26   26                     What are decorators in Python?   \n",
+       "27   27  What are the advantages of NumPy over regular ...   \n",
+       "28   28  What are the different types of tests you are ...   \n",
+       "29   29                         Can you explain Kubernetes   \n",
+       "30   30                       What is a Software Engineer?   \n",
+       "31   31                           What is a Data Engineer?   \n",
+       "32   32                              What is Architecture?   \n",
        "\n",
        "                                               answer  \n",
        "0   many forms;  methods/functions/operators with ...  \n",
@@ -435,10 +487,15 @@
        "24  the else block lets you execute code when ther...  \n",
        "25  the finally block lets you execute code, regar...  \n",
        "26  design pattern that adds new functionality to ...  \n",
-       "27  numpy arrays use less memory, are faster at pe...  "
+       "27  numpy arrays use less memory, are faster at pe...  \n",
+       "28                    Unit testing and manual testing  \n",
+       "29  an open source system for automating deploymen...  \n",
+       "30  uses computer science and engineering principl...  \n",
+       "31  an IT professional who prepares data for use b...  \n",
+       "32  the design decisions and structure of a system...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
